Vessel length overall output now has part and sup-part data. #10

--- a/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/V2 - Get scope - Vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/V2 - Get scope - Vessel length overall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,11 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\nRequirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\nRequirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\nRequirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\nRequirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
+      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
+      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
+      "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
      ]
     }
    ],
@@ -21,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +79,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 3
     }
    ],
    "source": [
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +119,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 4
     }
    ],
    "source": [
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +324,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 6
     }
    ],
    "source": [
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +365,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 7
     }
    ],
    "source": [
@@ -396,29 +400,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[5, 'Section 7', '2', 'none', 'before', '2', 'January', '1988']\n[5, 'Section 8', '2', 'none', 'before', '1', 'January', '1992']\n[5, 'Section 22', '2', 'none', 'before', '1', 'January', '1992']\n[13, 'Section 23', '2', 'none', 'before', '1', 'January', '1992']\n[15, 'Section 24', '5', 'none', 'before', '1', 'January', '1992']\n"
+      "[28, 'Section 12', '3', 'none', 'placed', 'closer', 'than', '10', 'cm']\n[48, 'Section 12', '4', 'none', 'be', 'closer', 'than', '2', 'cm']\n[6, 'Section 15', '4', 'none', 'of', 'less', 'than', '10.67', 'metres']\n[6, 'Section 16', '2', 'none', 'of', 'less', 'than', '10.67', 'meters']\n[26, 'Section 23', '3', 'none', 'of', 'more', 'than', '50', 'V']\n[24, 'Section 23', '4', 'none', 'of', 'more', 'than', '50', 'V']\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 7', '2', 'none', 'before', '2 January 1988'],\n",
-       " ['Section 8', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 22', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 23', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 24', '5', 'none', 'before', '1 January 1992']]"
+       "[['Section 15', '4', 'none', 'less than', '10.67', 'meters'],\n",
+       " ['Section 16', '2', 'none', 'less than', '10.67', 'meters']]"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 13
     }
    ],
    "source": [
@@ -426,10 +427,10 @@
     "from nltk.tokenize import word_tokenize\n",
     "\n",
     "#\n",
-    "# Find something: before\n",
+    "# Find \"than\" + floats\n",
     "#\n",
     "\n",
-    "result_for_csv_file_before = []\n",
+    "result_for_csv_file_than = []\n",
     "\n",
     "for line_index_number, line_text in enumerate(file_lines):\n",
     "\n",
@@ -441,76 +442,83 @@
     "\n",
     "        nltk_concordance_index = nltk.ConcordanceIndex(word_tokens)\n",
     "\n",
-    "        for offset in nltk_concordance_index.offsets(\"before\"):\n",
+    "        for offset in nltk_concordance_index.offsets(\"than\"):\n",
     "\n",
     "            identified_sentence_part_and_sub_part_as_tuple = get_sentence_type_from_sentence_index_number(line_index_number)\n",
     "            part_value = identified_sentence_part_and_sub_part_as_tuple[0]\n",
     "            sub_part_value = identified_sentence_part_and_sub_part_as_tuple[1]\n",
     "\n",
-    "            if is_float(word_tokens[offset + 1] and word_tokens[offset + 3]):\n",
-    "                print([\n",
-    "                    offset, # index\n",
-    "                    get_section_from_sentence_index_number(line_index_number),\n",
-    "                    part_value,\n",
-    "                    sub_part_value,\n",
-    "                    word_tokens[offset], \n",
-    "                    word_tokens[offset + 1], \n",
-    "                    word_tokens[offset + 2], \n",
-    "                    word_tokens[offset + 3]\n",
-    "                ])\n",
+    "            if is_float(word_tokens[offset + 1]):\n",
     "\n",
     "                paragraph_number = get_section_from_sentence_index_number(line_index_number)\n",
     "\n",
-    "                relation = word_tokens[offset]\n",
-    "                value_1 = word_tokens[offset + 1] + \" \" + word_tokens[offset + 2] + \" \" + word_tokens[offset + 3]\n",
+    "                print([\n",
+    "                    offset, # index\n",
+    "                    paragraph_number,\n",
+    "                    part_value,\n",
+    "                    sub_part_value,\n",
+    "                    word_tokens[offset - 2], \n",
+    "                    word_tokens[offset - 1], \n",
+    "                    word_tokens[offset], \n",
+    "                    word_tokens[offset + 1], \n",
+    "                    word_tokens[offset + 2]\n",
+    "                ])\n",
     "                \n",
-    "                if word_tokens[offset + 2] == \"January\" or word_tokens[offset + 2] == \"February\" or word_tokens[offset + 2] == \"March\" or word_tokens[offset + 2] == \"April\" or word_tokens[offset + 2] == \"May\" or word_tokens[offset + 2] == \"June\" or word_tokens[offset + 2] == \"July\" or word_tokens[offset + 2] == \"August\" or word_tokens[offset + 2] == \"September\" or word_tokens[offset + 2] == \"October\" or word_tokens[offset + 2] == \"November\" or word_tokens[offset + 2] == \"December\":\n",
-    "                    result_for_csv_file_before.append([\n",
+    "                relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
+    "                value_1 = word_tokens[offset + 1]\n",
+    "                value_2 = word_tokens[offset + 2]\n",
+    "                \n",
+    "                if value_2 == \"meters\" or value_2 == \"metres\": #misspelling\n",
+    "                    result_for_csv_file_than.append([\n",
     "                        paragraph_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
-    "                        value_1\n",
+    "                        value_1,\n",
+    "                        \"meters\"\n",
     "                        ])\n",
     "        \n",
-    "list(result_for_csv_file_before)"
+    "list(result_for_csv_file_than)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[9, 'Section 7', '1', 'none', 'after', '2', 'January', '1988']\n[5, 'Section 8', '1', 'none', 'after', '1', 'January', '1992']\n[13, 'Section 15', '4', 'none', 'after', '1', 'January', '1992']\n[5, 'Section 22', '1', 'none', 'after', '1', 'January', '1992']\n[13, 'Section 23', '1', 'none', 'after', '1', 'January', '1992']\n[13, 'Section 23', '4', 'none', 'after', '1', 'January', '2002']\n[13, 'Section 24', '1', 'none', 'after', '1', 'January', '1992']\n"
+      "[7, 'Section 10', '10', 'none', 'of', '8', 'to', '15', 'metres']\n[68, 'Section 12', '3', 'none', 'be', 'reduced', 'to', '5', 'cm']\n[6, 'Section 15', '1', 'none', 'of', '10.67', 'to', '15', 'metres']\n[6, 'Section 16', '1', 'none', 'of', '10.67', 'to', '15', 'metres']\n[6, 'Section 23', '1', 'none', 'of', '6', 'to', '15', 'metres']\n[24, 'Section 23', '1', 'none', 'of', 'up', 'to', '50', 'V']\n[6, 'Section 23', '2', 'none', 'of', '6', 'to', '15', 'metres']\n[24, 'Section 23', '2', 'none', 'of', 'up', 'to', '50', 'V']\n[6, 'Section 23', '3', 'none', 'of', '6', 'to', '15', 'metres']\n[6, 'Section 23', '4', 'none', 'of', '6', 'to', '15', 'metres']\n[6, 'Section 24', '1', 'none', 'of', '10.67', 'to', '15', 'metres']\n[17, 'Section 24', '3', 'none', 'is', 'listed', 'to', '22.5', 'degrees']\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 7', '1', 'none', 'after', '2 January 1988'],\n",
-       " ['Section 8', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 15', '4', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 22', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 23', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 23', '4', 'none', 'after', '1 January 2002'],\n",
-       " ['Section 24', '1', 'none', 'after', '1 January 1992']]"
+       "[['Section 10', '10', 'none', 'to', '8', '15', 'meters'],\n",
+       " ['Section 15', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
+       " ['Section 16', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
+       " ['Section 23', '1', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', '2', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', '3', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['Section 23', '4', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['Section 24', '1', 'none', 'to', '10.67', '15', 'meters']]"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 15
     }
    ],
    "source": [
     "#\n",
-    "# Find something: after\n",
+    "# Find \"to\" + floats\n",
     "#\n",
     "\n",
-    "result_for_csv_file_after = []\n",
+    "result_for_csv_file_to = []\n",
     "\n",
     "for line_index_number, line_text in enumerate(file_lines):\n",
     "\n",
@@ -522,54 +530,64 @@
     "\n",
     "        nltk_concordance_index = nltk.ConcordanceIndex(word_tokens)\n",
     "\n",
-    "        for offset in nltk_concordance_index.offsets(\"after\"):\n",
+    "        for offset in nltk_concordance_index.offsets(\"to\"):\n",
     "\n",
     "            identified_sentence_part_and_sub_part_as_tuple = get_sentence_type_from_sentence_index_number(line_index_number)\n",
     "            part_value = identified_sentence_part_and_sub_part_as_tuple[0]\n",
     "            sub_part_value = identified_sentence_part_and_sub_part_as_tuple[1]\n",
     "\n",
-    "            if is_float(word_tokens[offset + 1] and word_tokens[offset + 3]):\n",
-    "                print([\n",
-    "                    offset, # index\n",
-    "                    get_section_from_sentence_index_number(line_index_number),\n",
-    "                    part_value,\n",
-    "                    sub_part_value,\n",
-    "                    word_tokens[offset], \n",
-    "                    word_tokens[offset + 1], \n",
-    "                    word_tokens[offset + 2], \n",
-    "                    word_tokens[offset + 3]\n",
-    "                ])\n",
+    "            if is_float(word_tokens[offset + 1]):\n",
     "\n",
     "                paragraph_number = get_section_from_sentence_index_number(line_index_number)\n",
     "\n",
-    "                relation = word_tokens[offset]\n",
-    "                value_1 = word_tokens[offset + 1] + \" \" + word_tokens[offset + 2] + \" \" + word_tokens[offset + 3]\n",
+    "                print([\n",
+    "                    offset, # index\n",
+    "                    paragraph_number,\n",
+    "                    part_value,\n",
+    "                    sub_part_value,\n",
+    "                    word_tokens[offset - 2], \n",
+    "                    word_tokens[offset - 1], \n",
+    "                    word_tokens[offset], \n",
+    "                    word_tokens[offset + 1], \n",
+    "                    word_tokens[offset + 2]\n",
+    "                ])\n",
     "                \n",
-    "                if word_tokens[offset + 2] == \"January\" or word_tokens[offset + 2] == \"February\" or word_tokens[offset + 2] == \"March\" or word_tokens[offset + 2] == \"April\" or word_tokens[offset + 2] == \"May\" or word_tokens[offset + 2] == \"June\" or word_tokens[offset + 2] == \"July\" or word_tokens[offset + 2] == \"August\" or word_tokens[offset + 2] == \"September\" or word_tokens[offset + 2] == \"October\" or word_tokens[offset + 2] == \"November\" or word_tokens[offset + 2] == \"December\":\n",
-    "                    result_for_csv_file_after.append([\n",
+    "                value_2 = word_tokens[offset + 1]\n",
+    "        \n",
+    "                if is_float(word_tokens[offset - 1]):\n",
+    "                    value_1 = word_tokens[offset - 1]\n",
+    "                    relation = word_tokens[offset]\n",
+    "                else:\n",
+    "                    value_1 = ''\n",
+    "                    relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
+    "                \n",
+    "                if word_tokens[offset + 2] == \"meters\" or word_tokens[offset + 2] == \"metres\": #misspelling\n",
+    "                    result_for_csv_file_to.append([\n",
     "                        paragraph_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
-    "                        value_1\n",
+    "                        value_1,\n",
+    "                        value_2,\n",
+    "                        \"meters\"\n",
     "                        ])\n",
     "        \n",
-    "list(result_for_csv_file_after)"
+    "list(result_for_csv_file_to)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "with open(\"V2 - output - Get scope - Built date.csv\", 'w') as f:\n",
+    "with open(\"V2 - output - Get scope - Vessel length overall.csv\", 'w') as f:\n",
     "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
     "    \n",
-    "    write.writerows(result_for_csv_file_before)\n",
-    "    write.writerows(result_for_csv_file_after)"
+    "    write.writerows(result_for_csv_file_than)\n",
+    "    write.writerows(result_for_csv_file_to)"
    ]
   }
  ],
