--- a/NLP Python Jupyter Notebooks/Get chapter and section name from chapter text/Get chapter and section name from chapter text.ipynb
+++ b/NLP Python Jupyter Notebooks/Get chapter and section name from chapter text/Get chapter and section name from chapter text.ipynb
@@ -35,7 +35,11 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\nRequirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\nRequirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\nRequirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\nRequirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
+      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
+      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
+      "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
      ]
     }
    ],
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -103,156 +107,42 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('0', 'headline-chapter', '3'),\n",
-       " ('1', 'none', 'none'),\n",
-       " ('2', 'headline-section', '7'),\n",
-       " ('3', 'part', '1'),\n",
-       " ('4', 'part', '2'),\n",
-       " ('5', 'part', '3'),\n",
-       " ('6', 'none', 'none'),\n",
-       " ('7', 'none', 'none'),\n",
-       " ('8', 'none', 'none'),\n",
-       " ('9', 'none', 'none'),\n",
-       " ('10', 'none', 'none'),\n",
-       " ('11', 'headline-section', '8'),\n",
-       " ('12', 'part', '1'),\n",
-       " ('13', 'part', '2'),\n",
-       " ('14', 'part', '3'),\n",
-       " ('15', 'none', 'none'),\n",
-       " ('16', 'headline-section', '9'),\n",
-       " ('17', 'part', '1'),\n",
-       " ('18', 'sub-part', 'a'),\n",
-       " ('19', 'none', 'none'),\n",
-       " ('20', 'sub-part', 'b'),\n",
-       " ('21', 'none', 'none'),\n",
-       " ('22', 'sub-part', 'c'),\n",
-       " ('23', 'none', 'none'),\n",
-       " ('24', 'part', '2'),\n",
-       " ('25', 'sub-part', 'a'),\n",
-       " ('26', 'none', 'none'),\n",
-       " ('27', 'sub-part', 'b'),\n",
-       " ('28', 'none', 'none'),\n",
-       " ('29', 'part', '3'),\n",
-       " ('30', 'part', '4'),\n",
-       " ('31', 'part', '5'),\n",
-       " ('32', 'part', '6'),\n",
-       " ('33', 'part', '7'),\n",
-       " ('34', 'none', 'none'),\n",
-       " ('35', 'headline-section', '10'),\n",
-       " ('36', 'part', '1'),\n",
-       " ('37', 'part', '2'),\n",
-       " ('38', 'part', '3'),\n",
-       " ('39', 'part', '4'),\n",
-       " ('40', 'part', '5'),\n",
-       " ('41', 'part', '6'),\n",
-       " ('42', 'part', '7'),\n",
-       " ('43', 'part', '8'),\n",
-       " ('44', 'part', '9'),\n",
-       " ('45', 'part', '10'),\n",
-       " ('46', 'none', 'none'),\n",
-       " ('47', 'headline-section', '11'),\n",
-       " ('48', 'part', '1'),\n",
-       " ('49', 'part', '2'),\n",
-       " ('50', 'none', 'none'),\n",
-       " ('51', 'headline-section', '12'),\n",
-       " ('52', 'part', '1'),\n",
-       " ('53', 'part', '2'),\n",
-       " ('54', 'part', '3'),\n",
-       " ('55', 'part', '4'),\n",
-       " ('56', 'part', '5'),\n",
-       " ('57', 'none', 'none'),\n",
-       " ('58', 'headline-section', '13'),\n",
-       " ('59', 'none', 'none'),\n",
-       " ('60', 'none', 'none'),\n",
-       " ('61', 'headline-section', '14'),\n",
-       " ('62', 'part', '1'),\n",
-       " ('63', 'part', '2'),\n",
-       " ('64', 'part', '3'),\n",
-       " ('65', 'part', '4'),\n",
-       " ('66', 'none', 'none'),\n",
-       " ('67', 'headline-section', '15'),\n",
-       " ('68', 'part', '1'),\n",
-       " ('69', 'part', '2'),\n",
-       " ('70', 'part', '3'),\n",
-       " ('71', 'part', '4'),\n",
-       " ('72', 'part', '5'),\n",
-       " ('73', 'none', 'none'),\n",
-       " ('74', 'headline-section', '16'),\n",
-       " ('75', 'part', '1'),\n",
-       " ('76', 'part', '2'),\n",
-       " ('77', 'none', 'none'),\n",
-       " ('78', 'headline-section', '17'),\n",
-       " ('79', 'part', '1'),\n",
-       " ('80', 'part', '1'),\n",
-       " ('81', 'part', '3'),\n",
-       " ('82', 'part', '4'),\n",
-       " ('83', 'none', 'none'),\n",
-       " ('84', 'none', 'none'),\n",
-       " ('85', 'none', 'none'),\n",
-       " ('86', 'none', 'none'),\n",
-       " ('87', 'none', 'none'),\n",
-       " ('88', 'headline-section', '18'),\n",
-       " ('89', 'none', 'none'),\n",
-       " ('90', 'none', 'none'),\n",
-       " ('91', 'headline-section', '19'),\n",
-       " ('92', 'none', 'none'),\n",
-       " ('93', 'none', 'none'),\n",
-       " ('94', 'headline-section', '20'),\n",
-       " ('95', 'part', '1'),\n",
-       " ('96', 'part', '2'),\n",
-       " ('97', 'part', '3'),\n",
-       " ('98', 'none', 'none'),\n",
-       " ('99', 'headline-section', '21'),\n",
-       " ('100', 'part', '1'),\n",
-       " ('101', 'sub-part', 'a'),\n",
-       " ('102', 'none', 'none'),\n",
-       " ('103', 'sub-part', 'b'),\n",
-       " ('104', 'none', 'none'),\n",
-       " ('105', 'part', '2'),\n",
-       " ('106', 'none', 'none'),\n",
-       " ('107', 'headline-section', '22'),\n",
-       " ('108', 'part', '1'),\n",
-       " ('109', 'sub-part', 'a'),\n",
-       " ('110', 'none', 'none'),\n",
-       " ('111', 'sub-part', 'b'),\n",
-       " ('112', 'none', 'none'),\n",
-       " ('113', 'sub-part', 'c'),\n",
-       " ('114', 'none', 'none'),\n",
-       " ('115', 'sub-part', 'd'),\n",
-       " ('116', 'none', 'none'),\n",
-       " ('117', 'part', '2'),\n",
-       " ('118', 'none', 'none'),\n",
-       " ('119', 'headline-section', '23'),\n",
-       " ('120', 'part', '1'),\n",
-       " ('121', 'part', '2'),\n",
-       " ('122', 'part', '3'),\n",
-       " ('123', 'part', '4'),\n",
-       " ('124', 'none', 'none'),\n",
-       " ('125', 'headline-section', '24'),\n",
-       " ('126', 'part', '1'),\n",
-       " ('127', 'sub-part', 'a'),\n",
-       " ('128', 'none', 'none'),\n",
-       " ('129', 'sub-part', 'b'),\n",
-       " ('130', 'none', 'none'),\n",
-       " ('131', 'sub-part', 'c'),\n",
-       " ('132', 'none', 'none'),\n",
-       " ('133', 'sub-part', 'd'),\n",
-       " ('134', 'none', 'none'),\n",
-       " ('135', 'part', '2'),\n",
-       " ('136', 'sub-part', 'a'),\n",
-       " ('137', 'none', 'none'),\n",
-       " ('138', 'sub-part', 'b'),\n",
-       " ('139', 'none', 'none'),\n",
-       " ('140', 'part', '3'),\n",
-       " ('141', 'part', '4'),\n",
-       " ('142', 'part', '5'),\n",
-       " ('143', 'none', 'none'),\n",
-       " ('144', 'headline-section', '25'),\n",
-       " ('145', 'none', 'none')]"
+       "[('0', 'headline-chapter', '3', 'Fire , machinery and electric installations'),\n",
+       " ('2', 'headline-section', '7', 'Scope of application of this chapter'),\n",
+       " ('11', 'headline-section', '8', 'Fire safety'),\n",
+       " ('16', 'headline-section', '9', 'Oil-fired stoves'),\n",
+       " ('35', 'headline-section', '10', 'Installation , etc . of oilfired stove'),\n",
+       " ('47', 'headline-section', '11', 'Insulation of fireplaces , etc .'),\n",
+       " ('51', 'headline-section', '12', 'Smoke uptake and exhaust pipes'),\n",
+       " ('58', 'headline-section', '13', 'Insulation with non-combustible material'),\n",
+       " ('61',\n",
+       "  'headline-section',\n",
+       "  '14',\n",
+       "  'Insulation of machinery spaces in wooden vessels'),\n",
+       " ('67',\n",
+       "  'headline-section',\n",
+       "  '15',\n",
+       "  'Fire-extinguishing systems in machinery spaces'),\n",
+       " ('74', 'headline-section', '16', 'Fire detection and alarm system'),\n",
+       " ('78', 'headline-section', '17', 'Fire extinguishers'),\n",
+       " ('88', 'headline-section', '18', 'Ventilation systems'),\n",
+       " ('91', 'headline-section', '19', 'Materials , etc .'),\n",
+       " ('94',\n",
+       "  'headline-section',\n",
+       "  '20',\n",
+       "  'Storage of oil fuel and other flammable liquids'),\n",
+       " ('99', 'headline-section', '21', 'Materials in pipelines , etc .'),\n",
+       " ('107', 'headline-section', '22', 'Machinery and piping systems'),\n",
+       " ('119', 'headline-section', '23', 'Electrical installations'),\n",
+       " ('125',\n",
+       "  'headline-section',\n",
+       "  '24',\n",
+       "  'Emergency source of power and emergency lighting , etc .'),\n",
+       " ('144', 'headline-section', '25', 'Equivalents')]"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 14
     }
    ],
    "source": [
@@ -266,43 +156,32 @@
     "\n",
     "    sentence_word_count = len(word_tokens)\n",
     "\n",
-    "    if sentence_word_count > 3 and word_tokens[0] == '(' and hasNumbers(word_tokens[1]) and word_tokens[2] == ')':\n",
-    "        sentence_type = 'part'\n",
-    "        type_value = word_tokens[1] # part number\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
-    "\n",
-    "    elif sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
+    "    if sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
     "        sentence_type = 'headline-section'\n",
     "        type_value = word_tokens[1] # section number\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
-    "\n",
-    "    elif sentence_word_count > 2 and word_tokens[1] == ')':\n",
-    "        sentence_type = 'sub-part'\n",
-    "        type_value = word_tokens[0] # sub-part character\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
+    "        headline_in_a_list = word_tokens[3:sentence_word_count]\n",
+    "        headline_as_a_string = \" \".join(headline_in_a_list)\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value,headline_as_a_string))\n",
     "\n",
     "    elif sentence_word_count > 2 and line_index_number == 0 and hasNumbers(word_tokens[0]):\n",
     "        sentence_type = 'headline-chapter'\n",
     "        type_value = word_tokens[0] # chapter number\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
-    "\n",
-    "    else:\n",
-    "        sentence_type = 'none'\n",
-    "        type_value = 'none'\n",
-    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value))\n",
+    "        headline_in_a_list = word_tokens[2:sentence_word_count]\n",
+    "        headline_as_a_string = \" \".join(headline_in_a_list)\n",
+    "        forward_result_to_csv.append((str(line_index_number),sentence_type,type_value,headline_as_a_string))\n",
     "\n",
     "forward_result_to_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "with open(\"output - Get sentence type from chapter text.csv\", 'w') as f:\n",
+    "with open(\"output - Get chapter and section name from chapter text.csv\", 'w') as f:\n",
     "    write = csv.writer(f, delimiter=',', lineterminator='\\n')\n",
     "    write.writerows(forward_result_to_csv)"
    ]
