--- a/NLP Python Jupyter Notebooks/Script - Identify date by matching rules/Identify date.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Identify date by matching rules/Identify date.ipynb
@@ -159,6 +159,9 @@
     }
    ],
    "source": [
+    "# Had to run this to make something below work.\n",
+    "# This is a donwgrade of numpy to a version without a bug.\n",
+    "# This is a temp solution until a new version of numpy has solved the bug.\n",
     "!pip install numpy==1.19.3 --user"
    ]
   },
@@ -665,6 +668,113 @@
     "\n",
     "        if result_in_a_list:\n",
     "            print(result_in_a_list)"
+   ]
+  },
+  {
+   "source": [
+    "# Merge spacy result with spacy ner formated list of text"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('abc', 121), ('abc', 148), ('abc', 221), ('abc', 231)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "result_to_be_merged_in = [{'start': 16, 'end': 19, 'label': 'DATE'},{'start': 6, 'end': 9, 'label': 'DATE'}]\n",
+    "\n",
+    "sorted([('abc', 121),('abc', 231),('abc', 148), ('abc',221)], key=lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[{'start': 16, 'end': 19, 'label': 'DATE'}, {'start': 6, 'end': 9, 'label': 'DATE'}]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'start': 6, 'end': 9, 'label': 'DATE'},\n",
+       " {'start': 16, 'end': 19, 'label': 'DATE'}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    " print(result_to_be_merged_in)\n",
+    " sorted(result_to_be_merged_in, key=lambda x: x['start'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'text': '(2) Saucer formed rockwool sheets of at least 6 cm thickness shall be provided between smoke uptake and combustible material. Insulation in the form of non-combustible material shall be provided between metal cover plates and combustible material. Alternatively, a pipe with a diameter at least 6 cm larger than the smoke uptake pipe may be fitted outside this pipe, in order to provide vertical air circulation between the pipes. Insulation by saucer formed rockwool or mineral wool twine of at least 3 cm thickness shall be provided between the outer pipe and combustible material. The pipe shall be carried to at least 1 m above the deck, and the outlet shall be protected with a collar.\\n', 'ents': [{'start': 6, 'end': 9, 'label': 'DATE'}, {'start': 16, 'end': 19, 'label': 'DATE'}], 'title': 53}\n{'text': '(2) Saucer formed rockwool sheets of at least 6 cm thickness shall be provided between smoke uptake and combustible material. Insulation in the form of non-combustible material shall be provided between metal cover plates and combustible material. Alternatively, a pipe with a diameter at least 6 cm larger than the smoke uptake pipe may be fitted outside this pipe, in order to provide vertical air circulation between the pipes. Insulation by saucer formed rockwool or mineral wool twine of at least 3 cm thickness shall be provided between the outer pipe and combustible material. The pipe shall be carried to at least 1 m above the deck, and the outlet shall be protected with a collar.\\n', 'ents': [{'start': 6, 'end': 9, 'label': 'DATE'}, {'start': 6, 'end': 9, 'label': 'DATE'}, {'start': 16, 'end': 19, 'label': 'DATE'}, {'start': 16, 'end': 19, 'label': 'DATE'}], 'title': 53}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Something that must be done \n",
+    "# to make the notebook reload a function\n",
+    "# from a costum .py file.\n",
+    "#\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import importlib\n",
+    "\n",
+    "import identify_date\n",
+    "\n",
+    "from identify_date import merge_spacy_entity_results_to_spacy_ner_format\n",
+    "\n",
+    "importlib.reload(identify_date)\n",
+    "\n",
+    "################\n",
+    "################\n",
+    "\n",
+    "spacy_ner_formated_text_line = {'text': '(2) Saucer formed rockwool sheets of at least 6 cm thickness shall be provided between smoke uptake and combustible material. Insulation in the form of non-combustible material shall be provided between metal cover plates and combustible material. Alternatively, a pipe with a diameter at least 6 cm larger than the smoke uptake pipe may be fitted outside this pipe, in order to provide vertical air circulation between the pipes. Insulation by saucer formed rockwool or mineral wool twine of at least 3 cm thickness shall be provided between the outer pipe and combustible material. The pipe shall be carried to at least 1 m above the deck, and the outlet shall be protected with a collar.\\n',\n",
+    "  'ents': [],\n",
+    "  'title': 53}\n",
+    "\n",
+    "spacy_ner_entities_to_be_merged_in_as_a_list = [{'start': 16, 'end': 19, 'label': 'DATE'}, {'start': 6, 'end': 9, 'label': 'DATE'}]\n",
+    "\n",
+    "print(merge_spacy_entity_results_to_spacy_ner_format(spacy_ner_formated_text_line,spacy_ner_entities_to_be_merged_in_as_a_list))\n",
+    "\n",
+    "spacy_ner_formated_text_line = {'text': '(2) Saucer formed rockwool sheets of at least 6 cm thickness shall be provided between smoke uptake and combustible material. Insulation in the form of non-combustible material shall be provided between metal cover plates and combustible material. Alternatively, a pipe with a diameter at least 6 cm larger than the smoke uptake pipe may be fitted outside this pipe, in order to provide vertical air circulation between the pipes. Insulation by saucer formed rockwool or mineral wool twine of at least 3 cm thickness shall be provided between the outer pipe and combustible material. The pipe shall be carried to at least 1 m above the deck, and the outlet shall be protected with a collar.\\n',\n",
+    "  'ents': [{'start': 16, 'end': 19, 'label': 'DATE'}, {'start': 6, 'end': 9, 'label': 'DATE'}],\n",
+    "  'title': 53}\n",
+    "\n",
+    "print(merge_spacy_entity_results_to_spacy_ner_format(spacy_ner_formated_text_line,spacy_ner_entities_to_be_merged_in_as_a_list))"
    ]
   },
   {
