--- a/NLP Python Jupyter Notebooks/Script - Identify date by matching rules/Identify date.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Identify date by matching rules/Identify date.ipynb
@@ -45,6 +45,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2.3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "print(spacy.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
