Removed the word section from csv output for the Java application.

--- a/NLP Python Jupyter Notebooks/Merge results by sentence index number/V2 - Merge results by sentence index number.ipynb
+++ b/NLP Python Jupyter Notebooks/Merge results by sentence index number/V2 - Merge results by sentence index number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 2
     }
    ],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 3
     }
    ],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 4
     }
    ],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 5
     }
    ],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 6
     }
    ],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 7
     }
    ],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 8
     }
    ],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 9
     }
    ],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 10
     }
    ],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 11
     }
    ],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 12
     }
    ],
    "source": [
@@ -850,44 +850,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('Section 10', '10', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 10', '10', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 12', '1', 'none', 'pipe', 'least', 'mm'),\n",
-       " ('Section 12', '2', 'none', 'pipe', 'least', 'cm'),\n",
-       " ('Section 12', '3', 'none', 'pipe', 'least', 'cm'),\n",
-       " ('Section 15', '1', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 15', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 15', '4', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 15', '4', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 16', '1', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 16', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 18', 'none', 'none', 'vessel', 'least', 'cm'),\n",
-       " ('Section 23', '1', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 23', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 23', '2', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 23', '2', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 23', '3', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 23', '3', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 23', '4', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 23', '4', 'none', 'vessel', 'overall length', 'metre'),\n",
-       " ('Section 24', '1', 'none', 'vessel', 'length', 'metre'),\n",
-       " ('Section 24', '1', 'none', 'vessel', 'least', 'metre'),\n",
-       " ('Section 24', '1', 'none', 'vessel', 'overall length', 'metre')]"
+       "[('10', '10', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('10', '10', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('12', '1', 'none', 'pipe', 'least', 'mm'),\n",
+       " ('12', '2', 'none', 'pipe', 'least', 'cm'),\n",
+       " ('12', '3', 'none', 'pipe', 'least', 'cm'),\n",
+       " ('15', '1', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('15', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('15', '4', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('15', '4', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('16', '1', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('16', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('18', 'none', 'none', 'vessel', 'least', 'cm'),\n",
+       " ('23', '1', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('23', '1', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('23', '2', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('23', '2', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('23', '3', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('23', '3', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('23', '4', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('23', '4', 'none', 'vessel', 'overall length', 'metre'),\n",
+       " ('24', '1', 'none', 'vessel', 'length', 'metre'),\n",
+       " ('24', '1', 'none', 'vessel', 'least', 'metre'),\n",
+       " ('24', '1', 'none', 'vessel', 'overall length', 'metre')]"
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 13
     }
    ],
    "source": [
-    "# Remove word relationships that don't belong together\n",
     "\n",
     "data_property_and_data_type_that_dont_belong_together = ['length-voltage','overall length-voltage']\n",
     "\n",
@@ -896,16 +895,20 @@
     "for (section,part_value,sub_part_value,word_as_string,data_property,data_type) in lines_for_csv_file:\n",
     "    \n",
     "    check_string = data_property + \"-\" + data_type\n",
-    "    \n",
+    "\n",
+    "    # Remove the word \"Section \" for the Java application\n",
+    "    only_output_section_number = section.replace(\"Section \",\"\")\n",
+    "\n",
+    "    # Remove word relationships that don't belong together\n",
     "    if check_string not in data_property_and_data_type_that_dont_belong_together:\n",
-    "        final_lines_for_csv_file.append((section,part_value,sub_part_value,word_as_string,data_property,data_type))\n",
-    "    \n",
+    "        final_lines_for_csv_file.append((only_output_section_number,part_value,sub_part_value,word_as_string,data_property,data_type))\n",
+    "\n",
     "final_lines_for_csv_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
