--- a/NLP Python Jupyter Notebooks/Get scope - Machine power/V2 - Get scope - Machine power.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Machine power/V2 - Get scope - Machine power.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,12 +410,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 23', '3', 'none', 'more than', '50', 'V'],\n",
-       " ['Section 23', '4', 'none', 'more than', '50', 'V']]"
+       "[['23', '3', 'none', 'more than', '50', 'V'],\n",
+       " ['23', '4', 'none', 'more than', '50', 'V']]"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 11
     }
    ],
    "source": [
@@ -465,8 +465,12 @@
     "                value_2 = word_tokens[offset + 2]\n",
     "                \n",
     "                if word_tokens[offset + 2] == \"V\":\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_than.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -479,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -495,12 +499,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 23', '1', 'none', 'up to', '50', 'V'],\n",
-       " ['Section 23', '2', 'none', 'up to', '50', 'V']]"
+       "[['23', '1', 'none', 'up to', '50', 'V'],\n",
+       " ['23', '2', 'none', 'up to', '50', 'V']]"
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 12
     }
    ],
    "source": [
@@ -551,8 +555,12 @@
     "                    relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
     "                \n",
     "                if word_tokens[offset + 2] == \"V\":\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_to.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -565,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
