--- a/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/V2 - Get scope - Vessel length overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Vessel length overall/V2 - Get scope - Vessel length overall.ipynb
@@ -11,11 +11,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
-      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
-      "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
-      "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
+      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\nRequirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\nRequirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\nRequirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\nRequirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
      ]
     }
    ],
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -414,12 +410,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 15', '4', 'none', 'less than', '10.67', 'meters'],\n",
-       " ['Section 16', '2', 'none', 'less than', '10.67', 'meters']]"
+       "[['15', '4', 'none', 'less than', '10.67', 'meters'],\n",
+       " ['16', '2', 'none', 'less than', '10.67', 'meters']]"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 11
     }
    ],
    "source": [
@@ -469,8 +465,12 @@
     "                value_2 = word_tokens[offset + 2]\n",
     "                \n",
     "                if value_2 == \"meters\" or value_2 == \"metres\": #misspelling\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_than.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -499,18 +499,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 10', '10', 'none', 'to', '8', '15', 'meters'],\n",
-       " ['Section 15', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
-       " ['Section 16', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
-       " ['Section 23', '1', 'none', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', '2', 'none', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', '3', 'none', 'to', '6', '15', 'meters'],\n",
-       " ['Section 23', '4', 'none', 'to', '6', '15', 'meters'],\n",
-       " ['Section 24', '1', 'none', 'to', '10.67', '15', 'meters']]"
+       "[['10', '10', 'none', 'to', '8', '15', 'meters'],\n",
+       " ['15', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
+       " ['16', '1', 'none', 'to', '10.67', '15', 'meters'],\n",
+       " ['23', '1', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['23', '2', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['23', '3', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['23', '4', 'none', 'to', '6', '15', 'meters'],\n",
+       " ['24', '1', 'none', 'to', '10.67', '15', 'meters']]"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 12
     }
    ],
    "source": [
@@ -562,8 +562,12 @@
     "                    relation = word_tokens[offset - 1] + \" \" + word_tokens[offset]\n",
     "                \n",
     "                if word_tokens[offset + 2] == \"meters\" or word_tokens[offset + 2] == \"metres\": #misspelling\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_to.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -577,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
