--- a/NLP Python Jupyter Notebooks/Get scope - Built date/V2 - Get scope - Built date.ipynb
+++ b/NLP Python Jupyter Notebooks/Get scope - Built date/V2 - Get scope - Built date.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 3
     }
    ],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 4
     }
    ],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 6
     }
    ],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 7
     }
    ],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,15 +410,15 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 7', '2', 'none', 'before', '2 January 1988'],\n",
-       " ['Section 8', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 22', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 23', '2', 'none', 'before', '1 January 1992'],\n",
-       " ['Section 24', '5', 'none', 'before', '1 January 1992']]"
+       "[['7', '2', 'none', 'before', '2 January 1988'],\n",
+       " ['8', '2', 'none', 'before', '1 January 1992'],\n",
+       " ['22', '2', 'none', 'before', '1 January 1992'],\n",
+       " ['23', '2', 'none', 'before', '1 January 1992'],\n",
+       " ['24', '5', 'none', 'before', '1 January 1992']]"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 11
     }
    ],
    "source": [
@@ -465,8 +465,12 @@
     "                value_1 = word_tokens[offset + 1] + \" \" + word_tokens[offset + 2] + \" \" + word_tokens[offset + 3]\n",
     "                \n",
     "                if word_tokens[offset + 2] == \"January\" or word_tokens[offset + 2] == \"February\" or word_tokens[offset + 2] == \"March\" or word_tokens[offset + 2] == \"April\" or word_tokens[offset + 2] == \"May\" or word_tokens[offset + 2] == \"June\" or word_tokens[offset + 2] == \"July\" or word_tokens[offset + 2] == \"August\" or word_tokens[offset + 2] == \"September\" or word_tokens[offset + 2] == \"October\" or word_tokens[offset + 2] == \"November\" or word_tokens[offset + 2] == \"December\":\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_before.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -478,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -492,17 +496,17 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['Section 7', '1', 'none', 'after', '2 January 1988'],\n",
-       " ['Section 8', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 15', '4', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 22', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 23', '1', 'none', 'after', '1 January 1992'],\n",
-       " ['Section 23', '4', 'none', 'after', '1 January 2002'],\n",
-       " ['Section 24', '1', 'none', 'after', '1 January 1992']]"
+       "[['7', '1', 'none', 'after', '2 January 1988'],\n",
+       " ['8', '1', 'none', 'after', '1 January 1992'],\n",
+       " ['15', '4', 'none', 'after', '1 January 1992'],\n",
+       " ['22', '1', 'none', 'after', '1 January 1992'],\n",
+       " ['23', '1', 'none', 'after', '1 January 1992'],\n",
+       " ['23', '4', 'none', 'after', '1 January 2002'],\n",
+       " ['24', '1', 'none', 'after', '1 January 1992']]"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 13
     }
    ],
    "source": [
@@ -546,8 +550,12 @@
     "                value_1 = word_tokens[offset + 1] + \" \" + word_tokens[offset + 2] + \" \" + word_tokens[offset + 3]\n",
     "                \n",
     "                if word_tokens[offset + 2] == \"January\" or word_tokens[offset + 2] == \"February\" or word_tokens[offset + 2] == \"March\" or word_tokens[offset + 2] == \"April\" or word_tokens[offset + 2] == \"May\" or word_tokens[offset + 2] == \"June\" or word_tokens[offset + 2] == \"July\" or word_tokens[offset + 2] == \"August\" or word_tokens[offset + 2] == \"September\" or word_tokens[offset + 2] == \"October\" or word_tokens[offset + 2] == \"November\" or word_tokens[offset + 2] == \"December\":\n",
+    "\n",
+    "                    # Remove the word \"Section \" for the Java application\n",
+    "                    only_output_section_number = paragraph_number.replace(\"Section \",\"\")\n",
+    "\n",
     "                    result_for_csv_file_after.append([\n",
-    "                        paragraph_number,\n",
+    "                        only_output_section_number,\n",
     "                        part_value,\n",
     "                        sub_part_value,\n",
     "                        relation,\n",
@@ -559,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
